Fixed content spacing.

--- a/css/zwegersmel.css
+++ b/css/zwegersmel.css
@@ -67,6 +67,6 @@ ul.menu > li:hover, ul.menu > li.active {
 
 .content {
 	clear: both;
-	margin-top: 100px;
+	margin-top: 75px;
 	color: #777;
 }
